--- a/5-Blurry loading/index.html
+++ b/5-Blurry loading/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blurry loading</title>
+    <title>Blurry Loading</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,6 +15,9 @@
     />
   </head>
   <body>
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
+
     <script src="script.js"></script>
   </body>
 </html>
