--- a/7-split-landing-page/index.html
+++ b/7-split-landing-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Split Landing Page</title>
+    <title>Blurry loading</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,6 +15,16 @@
     />
   </head>
   <body>
+    <div class="container">
+      <div class="split left">
+        <h1>Playstation 5</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <div class="split right">
+        <h1>Xbox Seris X</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
